--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
                 <ul>Sponsers</ul>             
             </nav>
     </header>
-    <div>
-        <h1>Data Science for Social Work Conferance 2024</h1>
+    <div class="ConferanceLanding">
+        <h1 id="ConferanceTitle">Data Science for Social Work Conferance 2024</h1>
+        <img id=CustomDSLogo src="Images/_Custom Data Science logo black FINAL.png">
     </div>
         
 </body>
