--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Data Science Conferance</title>
     <link href="Style.css" rel="Stylesheet">
     <link rel="Icon" href="Images/DSRL Logo Transparent Background (2).png">
+    <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
 </head>    
 <body> 
     <header>
@@ -19,9 +20,17 @@
             </nav>
     </header>
     <div class="ConferanceLanding">
-        <h1 id="ConferanceTitle">Data Science for Social Work Conferance 2024</h1>
-        <img id=CustomDSLogo src="Images/_Custom Data Science logo black FINAL.png">
+        <div>
+            <h1 id="ConferanceTitle">Data Science for Social Work Conferance 2024</h1>
+            <h1 id="LocationInfo">Morgan State University @University Student Center room 210</h1>
+        </div>
+
+        <div>
+            <img id=CustomDSLogo src="Images/_Custom Data Science logo black FINAL.png">
+        </div>
+        <img id=CustomDSLogo2 src="Images/_Custom Data Science logo black FINAL.png">
     </div>
+
         
 </body>
 </html>
