Updated Front Bar/Handle
Updated Front Bar/Handle and description added

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link href="Style.css" rel="Stylesheet">
     <link rel="Icon" href="Images/DSRL Logo Transparent Background (2).png">
     <link href='https://fonts.googleapis.com/css?family=Archivo' rel='stylesheet'>
+    <link href='https://fonts.google.com/specimen/Archivo+Black' rel='stylesheet'>
+
 </head>    
 <body> 
     <header>
@@ -20,17 +22,27 @@
             </nav>
     </header>
     <div class="ConferanceLanding">
-        <div>
+        <div id="InfoContainer">
             <h1 id="ConferanceTitle">Data Science for Social Work Conferance 2024</h1>
-            <h1 id="LocationInfo">Morgan State University @University Student Center room 210</h1>
+            <h1 id="LocationInfo"><b>Morgan State University</b> 
+                @University Student Center room 210</h1>
         </div>
-
-        <div>
-            <img id=CustomDSLogo src="Images/_Custom Data Science logo black FINAL.png">
+        <div id="image">
+            <img id=CustomDSLogo src="Images/DSRL Logo Transparent Background (2).png">
         </div>
-        <img id=CustomDSLogo2 src="Images/_Custom Data Science logo black FINAL.png">
+      
+    </div>
+    <div id="EventDetails">
+         <img id="WomanOnComputer"  src="Images/Black woman at computer.webp" alt="">
+         <h1 id="Details">
+                Morgan State University is hosting an event focused on "Women in Data Science: Leading in Innovation, Impact, and Interventions." 
+                This event will explore how AI and data science can be leveraged to address social problems, with a particular focus on the NJ Metro and Baltimore/DC areas.
+                The 2024 theme highlights the vital role of women in driving innovative solutions and making a social impact through data-driven interventions.
+        </h1>
     </div>
 
-        
+
+
+
 </body>
 </html>
