--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <nav class="navbar">
                 <a href='#WomanOnComputer'class="btn" ><ul>About</ul></a>
                 <a href='#HostingTitle'class="btn" ><ul>Hosts</ul></a> 
-                <a href='#'class="btn" ><ul>Agenda</ul></a>
+                <a href='Events.html'class="btn" ><ul>Agenda</ul></a>
                 <a href='#'class="btn" ><ul>Sponsers</ul></a>         
             </nav>
     </header>
@@ -88,9 +88,5 @@
         </div>
         
     </div>
-
-
-
-
 </body>
 </html>
