--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <a href='#WomanOnComputer'class="btn12" ><ul>About</ul></a>
                 <a href='#HostingTitle'class="btn12" ><ul>Hosts</ul></a> 
                 <a href='Events.html'class="btn12" ><ul>Agenda</ul></a>
-                <a href='#'class="btn12" ><ul>Sponsers</ul></a>         
+                <a href='Sponsors.html'class="btn12" ><ul>Sponsers</ul></a>         
             </nav>
     </header>
 
@@ -269,8 +269,8 @@
             </div>
             <div class="footer-section contact">
                 <h2>Contact Us</h2>
-                <p>Email: <a href="mailto:info@dsresearchcenter.com">info@dsresearchcenter.com</a></p>
-                <p>Phone: +1 234 567 890</p>
+                <p>Email: <a href="radwan.shushane@morgan.edu">radwan.shushane@morgan.edu</a></p>
+                <p>Phone: +678-278-5001</p>
             </div>
         </div>
         <div class="footer-bottom">
