Deleted more pages
Deleted extra pages and added information from deleted pages to main index.hmtl, Fixed footer information and added registration picture. Fixed quick links at the top of site

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <a href="#"></a><img src="Images/DSRL Logo Transparent Background (2).png" class="DSRL-Logo">
             <h1 id="SiteName">Data Science Research Center </h1>
             <nav class="navbar">
-                <a href='#WomanOnComputer'class="btn12" ><ul>About</ul></a>
-                <a href='#HostingTitle'class="btn12" ><ul>Hosts</ul></a> 
-                <a href='Events.html'class="btn12" ><ul>Agenda</ul></a>
-                <a href='Sponsors.html'class="btn12" ><ul>Sponsers</ul></a>         
+                <a href='#EventDetails'class="btn12" ><ul>About</ul></a>
+                <a href='#HostingTitle2'class="btn12" ><ul>Registration</ul></a> 
+                <a href=#HostingTitle class="btn12" ><ul>Hosts</ul></a>
+                <a href='#HostingTitle3'class="btn12" ><ul>Sponsers</ul></a>         
             </nav>
     </header>
 
@@ -35,7 +35,7 @@
     </div>
 
     <div class="Registration">
-        <h1 id="HostingTitle">
+        <h1 id="HostingTitle2">
             Registration</h1>
         <div class="qr-container">
             <img src="Images/Registration-QR.jpeg" id="qr-code">
@@ -196,7 +196,7 @@
          
      </div>
     </div>
-     <h1 id="HostingTitle">
+     <h1 id="HostingTitle3">
          Sponsors
      </h1>
      <div class="Sponsers">
@@ -213,10 +213,10 @@
                 <p>The Data Science Research Center focuses on leveraging data science to address critical social issues through collaborative efforts between scholars and practitioners.</p>
             </div>
             <div class="footer-section links">
-                <h2>Quick Links</h2>
+                <h2>Quick links</h2>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="Events.html">Events</a></li>
+                    <li><a href="#Registration">Registration</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
@@ -225,6 +225,16 @@
                 <h2>Contact Us</h2>
                 <p>Email: <a href="radwan.shushane@morgan.edu">radwan.shushane@morgan.edu</a></p>
                 <p>Phone: +678-278-5001</p>
+            </div>
+            <div class="footer-section links">
+                <h2>Student Leaderhsip</h2>
+                <ul>
+                    <li><p>Collin Umeh</p></li>
+                    <li><p>Allison Joseph</p></li>
+                    <li><p>Dapiriye Briggs</p></li>
+                    <li><p>Caleb Kadiri</p></li>
+                </ul>
+            </div>
             </div>
         </div>
         <div class="footer-bottom">
